<resources>
    <string name="app_name">Muses</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Onboarding Text   -->
    <string name="onboarding_page_one_title">Exploring the museum just from home</string>
    <string name="onboarding_page_one_desc">Stay at home, don\'t go anywhere. Because you can start exploring by just staying at home.</string>
    <string name="onboarding_page_two_title">Take a look for museum objects in 3D model</string>
    <string name="onboarding_page_two_desc">The museum objects will look exactly like the original one.</string>
    <string name="onboarding_page_three_title">NFT (Non-Fungible Token) for museum objects decentralization</string>
    <string name="onboarding_page_three_desc">We use NFT for objects decentralization to make the objects more secure.</string>

    <!-- Ticket Detail   -->
    <string name="ticket_detail_image_description">This is museum picture</string>
    <string name="ticket_detail_museum_name_field">Name</string>
    <string name="ticket_detail_museum_type_field">Type</string>
    <string name="ticket_detail_museum_location_field">Location</string>
    <string name="ticket_detail_museum_established_field">Established</string>
    <string name="ticket_detail_ticket_expiration_field">Ticket Expiration Date</string>
    <string name="ticket_detail_ticket_status_field">Ticket Status</string>
    <string name="ticket_detail_button_use_ticket">Use Ticket</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Main Menu -->
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="popular_museum">Popular Museum</string>
    <string name="recommended_museum">Recommended Museum</string>
    <string name="see_all">See All</string>

    <!-- Museum Detail -->
    <string name="museum_detail_button_buy">Buy</string>
    <string name="museum_detail_ticket_price">Ticket Price</string>
    <string name="museum_detail_ticket_plus">+</string>
    <string name="museum_detail_ticket_minus">-</string>
    <string name="museum_detail_ticket_default">0</string>

    <!-- Payment Method -->
    <string name="payment_method_choose">Choose one of payment method below:</string>
    <string name="payment_method_term">I have read all terms and condition</string>
    <string name="payment_method_forms">All forms of crime will be followed up by the parties concerned</string>

    <!-- Payment Confirmation -->
    <string name="payment_confirmation_confirm">Confirm</string>
    <string name="payment_confirmation_detail">Here your transaction detail:</string>
    <string name="payment_confirmation_museum_name_field">Name :  </string>
    <string name="payment_confirmation_museum_type_field">Type :  </string>
    <string name="payment_confirmation_museum_location_field">Location :  </string>
    <string name="payment_confirmation_museum_established_field">Established :  </string>
    <string name="payment_confirmation_museum_payment_method_field">Payment Method :  </string>
    <string name="payment_confirmation_museum_ticket_valid_field">Ticket Valid :  </string>
    <string name="payment_confirmation_museum_ticket_price_field">Ticket Price :  </string>
    <string name="payment_confirmation_museum_ticket_amount_field">Ticket Amount :  </string>

    <!-- Bottom Menu -->
    <string name="home">Home</string>
    <string name="my_ticket">My Ticket</string>
    <string name="profile">Profile</string>

    <!-- Select Favorite Category -->
    <string name="select_your_favorite">Select your favorite museum categories:</string>

    <!-- Reset Password -->
    <string name="reset_password_email_has_been_sent">Email has been sent!</string>
    <string name="reset_password_check_your_email">Please check your email, to reset your password.</string>

    <string name="object_viewer_helper_title">Orbit Around</string>
    <string name="object_viewer_helper_desc">Use one finger to drag for orbit around</string>
</resources>