<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".TicketDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:navigationIconTint="?attr/colorPrimary"
            app:title="Museum Detail"
            app:titleCentered="true"
            app:titleTextColor="@color/white">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/museumCardPicture"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/museumPicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ticket_detail_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/img_the_metropolitan_museum_of_art" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/museumCardPicture"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_name_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/museumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_name_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ticket_detail_museum_type_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/museumType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_name_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ticket_detail_museum_location_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/museumLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_location_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ticket_detail_museum_established_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/museumEstablished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_established_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/museum_detail_ticket_price"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ticketPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/museum_detail_ticket_price"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:backgroundTint="?attr/colorPrimaryVariant">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            tools:ignore="RtlHardcoded">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:text="@string/museum_detail_ticket_minus"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/museum_detail_ticket_default"
                android:textSize="23sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:text="@string/museum_detail_ticket_plus"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="0"
                android:textSize="23sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBuyTicket"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="20dp"
                android:text="@string/museum_detail_button_buy"
                android:textAllCaps="false"
                app:cornerRadius="20dp" />

        </LinearLayout>


    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>