<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".TicketDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:navigationIconTint="?attr/colorPrimary"
            app:title="Ticket Detail"
            app:titleCentered="true"
            app:titleTextColor="@color/white">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/museumCardPicture"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/museumPicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ticket_detail_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/img_the_metropolitan_museum_of_art" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/museumCardPicture"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_name_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/museumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_name_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ticket_detail_museum_type_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/museumType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_name_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ticket_detail_museum_location_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/museumLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_location_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ticket_detail_museum_established_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/museumEstablished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_museum_established_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ticket_detail_ticket_expiration_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ticketExpiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_ticket_expiration_field"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ticket_detail_ticket_status_field"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ticketStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_detail_ticket_status_field"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:backgroundTint="?attr/colorPrimaryVariant">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUseTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:letterSpacing="0.01"
            android:text="@string/ticket_detail_button_use_ticket"
            android:textAllCaps="false"
            app:cornerRadius="20dp" />

    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>